# SketchyCAD

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  demo.cpp  demo_compute.cpp  demo_graphics.cpp  makefile
Assets/Font/: FontWriter.py
Include/cad/: Application.h  Cad.h  Command.h  Dispatcher.h
Include/cad/gui/: Container.h  Event.h
Include/cad/object/: ObjectBuilder.h  ObjectRegistry.h  ObjectVisitor.h
Include/cad/syntax/: Arg.h  ArgSignature.h  Syntax.h
Include/core/: Core.h  Viewport.h
Include/core/chrono/: Chronometer.h  (+1 more)
Source/: main.cpp
Source/cad/: Application.cpp  Command.cpp  Registry.cpp
Source/core/: Viewport.cpp
include/: Cad.h  Chrono.h  Console.h  Engine.h  Task.h  Window.h
include/cad/: Application.h  Cad.h  CadApplication.h  CadCommand.h  CadController.h  CadGui.h  CadObject.h  CadRegistry.h  CadViewfinder.h  Command.h  Controller.h  Cursor.h  Dispatcher.h  Ray.h  RendererVisitor.h  Reticle.h  Viewfinder.h
include/core/: Controller.h  Core.h  Program.h  State.h
source/: Clock.cpp  Engine.cpp  Font.cpp  Graphics.cpp  Image.cpp  Input.cpp  Interactor.cpp  Math.cpp  Panel.cpp  Pixel.cpp  TextRenderer.cpp  Transform.cpp  Viewport.cpp  Window.cpp
source/Cad/: CameraController.cpp  Clipboard.cpp  Command.cpp  Commands.cpp  Controller.cpp  Cursor.cpp  Mode.cpp  Object.cpp  World.cpp
source/cad/: Application.cpp  CadApplication.cpp  CadCommand.cpp  CadObject.cpp  CadRegistry.cpp  CadViewfinder.cpp  Command.cpp  Cursor.cpp  Object.cpp  Ray.cpp  Reticle.cpp  Viewfinder.cpp
source/core/: Program.cpp  Viewport.cpp
(+65 files in other folders)
